# spam-filter

./: .gitignore  README.MD  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
data/: eng.txt  hyperskill-dataset-96829169.txt  hyperskill-dataset-97148325.txt  hyperskill-dataset-97148377.txt  hyperskill-dataset-97148533.txt  korean.txt
src/spam/: filter.py  preprocess.py  probability_assess.py
src/spam_filter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/topics/: calc_proportions_nan.py  check64bits.py  count_nans.py  debug_requests.py  diabetes.py  head_child.py  korean.py  linreg.py  matrix_least_squares.py  minimal_solution.py  minors_of_matrix.py  multinomialNB.py  nltk_bigram_find.py  pandas_nan.py  regex.py  spacy_demo.py  spacy_ents.py  trigrams.py
test/: test_filter.py  test_probability_assess.py  test_process.py
