[metadata]
name = spam-filter
version = 3.12.3
packages = []
url =
license =
author = jwisskirchen
author_email =
description = Jetbrains academy Machine Learning Algorithms from Scratch track project.

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src